# mlx-lm-qwen3.5-9B

./: README.md  app.py  app_mcp.py  client.py  foundry_local.py  foundry_local_overview.pptx  main.py  main_mcp.py  mcp_server.py  mcp_web_server.py  pyproject.toml  smoke_test.py
.github/: copilot-instructions.md
templates/: index.html
